--- a/src/globals/layout/_spacing.scss
+++ b/src/globals/layout/_spacing.scss
@@ -16,5 +16,5 @@ $table-cell-spacing--big: ( 8.4px );
 $table-cell-spacing--large: rem( 10px );
 $table-cell-spacing--big-large: rem( 21px );
 
-$panel-spacing: rem( 12px 0 );
+$panel-spacing: rem( 12px );
 $panel-spacing--large: rem( 8px );
